2008-06-26  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c: Remove abuse of internal knowledge about GTK+.
	Refactoring of the source removal code and the widget creation
	code. Make the widget creation even more data driven. Use a
	"normal" top-level window for the slider with appropriate
	properties set rather than some of the magic that had been used.
	This changes the behaviour of the slider. It is no longer modal,
	instead it is sticky and stay-on-top in the same style as other
	dock windows.

	* dock.h: Remove unnecessary includes. 

	* applet.c: Remove the explicit grab in favour of a traditional
	top-level window for the volume slider. Make sure that an
	adjustment isn't leaked when the applet is moved from a horizontal
	to a vertical panel.

2008-05-31  Gabor Kelemen  <kelemeng@gnome.hu>

	* docs/Makefile.am: Added hu to DOC_LINGUAS
	* docs/hu/hu.po: Added Hungarian translation by Őry Máté.

2008-04-25  Callum McKenzie  <callum@spooky-possum.org>

	* applet.c:
	* preferences.c: Fix the math for volume level calculations. This
	shouldn't have affected anyone, but it's best to be sure. Patch
	from Tim-Philipp Muller (Bug #529739).

2008-04-22  Ilkka Tuohela <hile@iki.fi>

	* docs/Makefile.am: Added Finnish translation by Jukka Heikkilä.
	* docs/fi: Added fi to DOC_LINGUAS

2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* dock.c: Patch from Danny Baumann to set the window type hint to
	assist compositing window managers (see bug #522238).

2008-02-13  Jonh Wendell <jwendell@gnome.org>

	* docs/Makefile.am:
	* docs/pt_BR/pt_BR.po: added Brazilian Portuguese translation by Amadeu A. Barbosa Junior.
	* docs/: Added some files to the list of svn ignored files.

2008-01-04  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_MixerApplet.xml: Patch from Ted Gould to remove
	almost-impossible-to-use accelerators from the menu. See bug
	#498258. Fortunately these were never documented.

2007-12-02  Changwoo Ryu  <cwryu@debian.org>
